--- a/examples/canary/canary-preview-ingress.yaml
+++ b/examples/canary/canary-preview-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: canary-demo-preview
+  namespace: istio-rollout
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     kubernetes.io/ingress.class: nginx
