--- a/examples/canary/kustomization.yaml
+++ b/examples/canary/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
+namespace: istio-rollout
 resources:
 - canary-rollout.yaml
 - canary-service.yaml
